--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "crypto-js": "^4.0.0",
     "dayjs": "^1.10.4",
     "element-plus": "^1.0.2-beta.32",
+    "file-saver": "^2.0.5",
     "highlight.js": "^10.6.0",
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.20",
@@ -28,7 +29,8 @@
     "vue-router": "^4.0.3",
     "vue3-cropper": "^0.4.0",
     "vuex": "^4.0.0-rc.2",
-    "wangeditor": "^4.6.6"
+    "wangeditor": "^4.6.6",
+    "xlsx": "^0.16.9"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.5.11",
