--- a/package.json
+++ b/package.json
@@ -5,7 +5,15 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "lint:style": "stylelint **/*.{vue,scss} --fix",
+    "image-webpack-loader": "cnpm i image-webpack-loader -D",
+    "build:report": "vue-cli-service build --report",
+    "inspect": "vue-cli-service inspect",
+    "template": "plop",
+    "clear": "npm cache clean -f&&rimraf node_modules&&npm install --registry=https://registry.npm.taobao.org&&cnpm i image-webpack-loader -D",
+    "use:npm": "nrm use npm",
+    "use:taobao": "nrm use taobao"
   },
   "dependencies": {
     "axios": "^0.21.1",
@@ -29,7 +37,7 @@
     "vue-router": "^4.0.3",
     "vue3-cropper": "^0.4.0",
     "vuex": "^4.0.0-rc.2",
-    "wangeditor": "^4.6.6",
+    "wangeditor": "^4.6.8",
     "xlsx": "^0.16.9"
   },
   "devDependencies": {
@@ -38,7 +46,7 @@
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "^4.5.11",
-    "@vue/compiler-sfc": "^3.0.0",
+    "@vue/compiler-sfc": "^3.0.7",
     "@vue/eslint-config-prettier": "^6.0.0",
     "babel-eslint": "^10.1.0",
     "babel-plugin-dynamic-import-node": "^2.3.3",
@@ -51,6 +59,7 @@
     "eslint-plugin-vue": "^7.6.0",
     "filemanager-webpack-plugin": "^3.1.0",
     "image-webpack-loader": "^7.0.1",
+    "plop": "^2.7.4",
     "prettier": "^2.2.1",
     "sass": "^1.32.8",
     "sass-loader": "^10.1.1",
